crates/uitest/fixtures/ty_check/payable_on_recv_block.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/payable_on_recv_block.fe
---
error[12-0001]: unsupported `#[payable]` attribute on recv block
  ┌─ payable_on_recv_block.fe:7:5
  │
7 │     #[payable]
  │     ^^^^^^^^^^ `#[payable]` is only supported on init blocks and recv arms
